# apium

./: .coveragerc  .mailmap  .pylintrc  .travis.yml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
apium/: __init__.py  client.py  command.py  exceptions.py  executor.py  frameworks.py  future.py  inspect.py  server.py  task.py  utils.py  worker.py
apium/crypt/: __init__.py  dh.py
docs/: Makefile  apium.rst  conf.py  doctests_for_private.rst  index.rst  make.bat
tasks/: __init__.py
tests/: conftest.py  task_import.py  test_crypt.py  test_django.py  test_integration.py  test_task.py
tests/django_test_project/: settings.py  urls.py  wsgi.py
tests/test_frameworks/test_django/: conftest.py  tests.py
tests/test_frameworks/test_django/test_project/: settings.py
