[metadata]
name = apium
author = Christian Boelsen
author-email = christianboelsen+github@gmail.com
summary = A simple remote task queue, with no dependencies.
description-file = README.rst
home-page = https://github.com/cryporchild/apium
license = LGPLv3
keywords = celery task queue
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    apium

[wheel]
universal = 1
