[metadata]
name = apium
author = Christian Boelsen
author-email = christianboelsen+github@gmail.com
summary = A simple remote task queue, with no dependencies.
description-file = README.rst
home-page = https://github.com/cryporchild/apium
license = LGPLv3
keywords = celery, task, queue, job, async
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    apium

[entry_points]
console_scripts =
    apium-worker = apium.command:start_workers
    apium-inspect = apium.command:inspect

[wheel]
universal = 1
